k8s/sporthub-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sporthub-backend
  namespace: sporthub-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sporthub-backend
  template:
    metadata:
      labels:
        app: sporthub-backend
    spec:
      containers:
        - name: backend
          image: zilov14/full-mvp-backend:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
