k8s/sporthub-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sporthub-backend
  namespace: sporthub
spec:
  selector:
    app: sporthub-backend
  ports:
    - port: 8000
      targetPort: 8000
