k8s/sporthub-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sporthub-frontend
  namespace: sporthub
spec:
  selector:
    app: sporthub-frontend
  ports:
    - port: 80
      targetPort: 80
