k8s/sporthub-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sporthub-postgres
  namespace: sporthub-dev
spec:
  serviceName: sporthub-postgres
  replicas: 1
  selector:
    matchLabels:
      app: sporthub-postgres
  template:
    metadata:
      labels:
        app: sporthub-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: sporthub-postgres
  namespace: sporthub-dev
spec:
  type: ClusterIP
  selector:
    app: sporthub-postgres
  ports:
    - port: 5432
      targetPort: 5432
